--- a/css/styles.css
+++ b/css/styles.css
@@ -161,53 +161,16 @@ img {
 .button-list .second-button:not(:last-child) {
     margin-right: 24px;
 } */
-/* -----------------------------------------CUSTOMERS*/
-
-
-
-/* .customers-logo {
-    display: flex;
-    gap: 24px;
-}
-.customers-item {
-    width: 168px;
-    height: 88px;   
-}
-.customers-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%; 
-    border: 1px solid var(--color-border);
-    border-radius: 4px;
-    fill: var(--color-border); 
-    transition: fill var(--hover-transition),
-    border-color var(--hover-transition);
-     
-}
-.customers-link:hover,
-.customers-link:focus {
-    fill:var(--color-hover);
-    border-color: var(--color-hover);
-}  */
 
 /*--------------------==----------------------FOOTER */
 
-/* .footer {
-    background-color: var(--color-second-text);
-    padding-top: 100px; 
-    padding-bottom: 100px;
-    
-}
+/*
 .footer-section {
     display: flex;
 } */
 
 
-/* .accent-footer {
-    color:var(--color-second-white) ;
-}
+/* 
 
 .footer-text {
     color: #E7E9FC;
