--- a/css/mobile.css
+++ b/css/mobile.css
@@ -167,7 +167,6 @@
         display: flex;
         max-width: 428px;
         gap: 56px;
-        justify-content: space-between;
     }
     .mobile-site-list-item {
         width: 40px;
@@ -570,6 +569,7 @@ textarea:hover {
     flex-wrap: wrap;
     column-gap: 16px;
     row-gap: 72px;
+    justify-content: center;
 }
 .customers-item {
     width: 190px;
@@ -681,7 +681,7 @@ textarea:hover {
     
 }
 .footer-input {
-    width: 396px ; 
+    width: 100%; 
     height: 40px;
     color: rgba(255, 255, 255, 0.6);
     font-weight: 400;
@@ -724,7 +724,7 @@ textarea:hover {
         font-weight: 700;
         font-size: 28px;
         line-height: 1.4;
-        color: #434455 ;
+        color: #404BBF; 
         letter-spacing: 0.02em;
         text-transform: capitalize;
     }
