--- a/css/styles.css
+++ b/css/styles.css
@@ -57,10 +57,7 @@ img {
 
 /* 
 /* -----------------------------PORTFOLIO */
-/* .section-portfolio {
-    padding-top: 96px;
-    padding-bottom: 120px;
-}
+/* 
 
 .section-site {
     display: flex;
@@ -120,42 +117,6 @@ img {
     border-top: none;
     padding: 32px 16px ; 
 } */
-/* ------------------------------------------BUTTON */
-/* .button {
-    background-color: var(--color-second-white);
-    color: var(--color-accent);
-    cursor: pointer;
-    font-family: 'Roboto';
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    text-align: center;
-    letter-spacing: 0.04em;
 
-    border-radius: 4px;
-    border: 1px solid #E7E9FC;
-    padding:12px 24px;
-    transition: background-color var(--hover-transition),
-    color var(--hover-transition), border-color var(--hover-transition),
-    box-shadow var(--hover-transition) ;
-} */
 
-/* .button:hover,
-.button:focus {
-    background-color:var(--color-hover);
-    color:var(--background-white-color);
-    border-color: transparent;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-     0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.button-list {
-   display: flex;
-   justify-content: center;
-   margin-bottom: 72px;
-}
-
-.button-list .second-button:not(:last-child) {
-    margin-right: 24px;
-} */
 
