--- a/css/mobile.css
+++ b/css/mobile.css
@@ -757,8 +757,11 @@ textarea:hover {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
      0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.current-btn {
+    background-color: var(--color-hover);
+    color: #FFFFFF;
+}
 .section-site {
-    display: block;
     width: 396px;
 }
 .item {
@@ -806,6 +809,9 @@ textarea:hover {
     letter-spacing: 0.02em;
     color: var(--color-second-white);
 }
+.component-text {
+    color: var(--color-main-text);   
+}
 .components-portfolio-item {
     font-size: 20px;
     line-height: 1.2;
@@ -816,6 +822,7 @@ textarea:hover {
     margin-bottom: 8px;
 
 }
+
 .section-site .item:not(:last-child) {
     margin-bottom: 48px;
 }
@@ -851,6 +858,10 @@ textarea:hover {
     }
     .modal-title {
         font-size: 12px;
+    }
+    .section-site {
+        display: block;
+        width: 290px;
     }
 }
 
