--- a/css/desktop.css
+++ b/css/desktop.css
@@ -88,7 +88,13 @@ max-width: 1158px;
     padding-bottom: 120px;
      }
 .section-mob-staff {
-   width: 1158px;
+   max-width: 1158px;
+}
+.section-list-staff {
+   
+    flex-wrap: nowrap;
+    column-gap: 24px;
+    
 }
 .section-customers {
     padding-top: 120px;
