--- a/css/tablet.css
+++ b/css/tablet.css
@@ -44,9 +44,13 @@
     position: relative;
     color: var(--color-hover);
 }
-/* .mobile-site-nav.current {
-    color:  #404BBF;
-} */
+.contacts:not(:last-child){
+margin-bottom: 6px;
+}
+
+
+
+
 .address {
     display: flex;
     font-style: normal;
@@ -78,7 +82,6 @@
     color: var(--color-main-text);
     display: block;
     padding-bottom: 12px;
-    margin-top: 6px;
     transition: color var(--hover-transition);
 }
 .site-auth .phone:hover,
@@ -142,6 +145,7 @@
     column-gap: 24px;
     row-gap: 64px;
 }
+
 .section-staff:not(:last-child) {
     margin-bottom: 0; 
 }
@@ -149,15 +153,14 @@
     text-align: center;
     padding: 32px 16px; 
 }
+ 
+
 .section-mob-staff {
-    width: 552px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 584px;
     }
 .container-tablet{
-    max-width: 552px;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 584px;
+   
 }
 .customers-logo {
     column-gap: 24px;
@@ -166,9 +169,8 @@
     width: 168px;
     }
 .footer-section {
-    max-width: 552px;
-    padding-left: 0;
-    padding-right: 0;
+    max-width: 584px;
+   
 }
 .footer-input {
         width: 264px ;
